# aiidalab-sssp-workflow

./: .gitignore  .pre-commit-config.yaml  Procfile  pyproject.toml
src/aiidalab_sssp/: __init__.py  data.py
src/aiidalab_sssp/assets/styles/: __init__.py  explore.css  table.css
src/aiidalab_sssp/components/: article.py  computational_resource.py  viz.py
src/aiidalab_sssp/components/periodic_table/: PTable.jsx  __init__.py  bundle.js  package-lock.json  package.json  widget.js  widget.jsx
src/aiidalab_sssp/components/ptable/: details.py  element.py  table.py
src/aiidalab_sssp/models/: element.py
src/aiidalab_sssp/pages/: __init__.py  explore.py
src/aiidalab_sssp/pages/explore/: __init__.py
src/aiidalab_sssp/pages/howto/: __init__.py
src/aiidalab_sssp/pages/verification/: __init__.py
src/aiidalab_sssp/pages/verify/: __init__.py
